add categorical analysis

--- a/0-Workflow.ipynb
+++ b/0-Workflow.ipynb
@@ -67,6 +67,12 @@
     "# expression unit for plots\n",
     "# example: '$\\mu$M(GFP)/(gCDW*h)' 'GFP intensity'\n",
     "Expression_Unit = 'Expression'#'GFP Activity'\n",
+    "# Response value engineering\n",
+    "# The machine learning to the expression can either take place on the original values, standardized values with zero mean and unit variance, or categorized expression values\n",
+    "# Response_Value = 0: standardized expression with zero mean and unit variance\n",
+    "# Response_Value = 1: expression as measured in the input\n",
+    "# Response_Value = >1: categorized expression with bin number according to the value\n",
+    "Response_Value = 3\n",
     "# the availabity of replicates improves regressor training, if your data is based on statistical summaries you can generate random samples with the same statistical properties, \n",
     "# you need to provide column names for standard deviation, the mean is assumed to be in Y_Col_Name\n",
     "# Stats_Samples contains column names with the number of replicates\n",
@@ -129,6 +135,8 @@
     "    'Y_Col_Name': Y_Col_Name, # ['Promoter Activity'], ['Ecol Promoter Activity', 'Ptai Promoter Activity'],\n",
     "    # Promoter ID column name\n",
     "    'ID_Col_Name': ID_Col_Name,\n",
+    "    # engineering of target value \n",
+    "    'Response_Value': Response_Value,\n",
     "    # Decision whether to remove outlier from the data set\n",
     "    'Revome_Outlier': False,\n",
     "    # information for generating samples from statistics\n",
