--- a/3-Regressor-Performance.ipynb
+++ b/3-Regressor-Performance.ipynb
@@ -37,9 +37,8 @@
     "from math import sqrt\n",
     "from ExpressionExpert_Functions import init_Exp2, Data_Src_Load, split_train_test, list_onehot, Insert_row_, my_CrossValScore, make_DataDir\n",
     "from sklearn.model_selection import cross_val_score, GroupShuffleSplit\n",
-    "from sklearn.metrics import r2_score, mean_squared_error, make_scorer\n",
-    "%matplotlib inline\n",
-    "my_r2_score = make_scorer(r2_score)"
+    "from sklearn.metrics import r2_score, mean_squared_error, make_scorer, balanced_accuracy_score, classification_report, f1_score\n",
+    "%matplotlib inline\n"
    ]
   },
   {
@@ -57,13 +56,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = init_Exp2('config_bsub.txt')\n",
+    "Name_Dict = init_Exp2('config_Pput.txt')\n",
     "\n",
     "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
     "Data_Folder = 'data-{}'.format(File_Base) \n",
     "ML_Date = Name_Dict['ML_Date']\n",
-    "ML_Type = Name_Dict['ML_Regressor']\n",
-    "Y_Col_Name = eval(Name_Dict['Y_Col_Name'])\n"
+    "ML_Regressor = Name_Dict['ML_Regressor'][:-1]\n",
+    "ML_Type = Name_Dict['ML_Regressor'][-1]\n",
+    "Y_Col_Name = eval(Name_Dict['Y_Col_Name'])\n",
+    "Response_Value = eval(Name_Dict['Response_Value'])"
    ]
   },
   {
@@ -97,41 +98,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Random Forest Regressor file identifier for date\n",
-    "\n",
+    "# Loading the correct scoring for regression and classification\n",
+    "if Response_Value > 1:\n",
+    "    my_score = make_scorer(f1_score, average='weighted')\n",
+    "else:\n",
+    "    my_score = make_scorer(r2_score)\n",
+    "    \n",
     "# Number of independent promoter library measurements\n",
     "Measure_Numb = int(Name_Dict['Library_Expression'])\n",
     "ML_Best = dict()\n",
     "Expr_Scaler = dict()\n",
-    "Y_train = np.empty((SeqTrain.shape[0], Measure_Numb))\n",
-    "Y_train_pred = np.empty((SeqTrain.shape[0], Measure_Numb))\n",
-    "Y_test = np.empty((SeqTest.shape[0], Measure_Numb))\n",
-    "Y_test_pred = np.empty((SeqTest.shape[0], Measure_Numb))\n",
+    "mydtype = 'int8' if Response_Value > 1 else 'object' \n",
+    "Y_train = np.empty((SeqTrain.shape[0], Measure_Numb), dtype=mydtype)\n",
+    "Y_train_pred = np.empty((SeqTrain.shape[0], Measure_Numb), dtype=mydtype)\n",
+    "Y_test = np.empty((SeqTest.shape[0], Measure_Numb), dtype=mydtype)\n",
+    "Y_test_pred = np.empty((SeqTest.shape[0], Measure_Numb), dtype=mydtype)\n",
     "CVsplit = 25\n",
     "scores = np.empty((CVsplit, Measure_Numb))\n",
     "\n",
     "r2_train = np.empty(Measure_Numb)\n",
     "r2_test = np.empty(Measure_Numb)\n",
-    "rmse_train = np.empty(Measure_Numb)\n",
-    "rmse_test = np.empty(Measure_Numb)\n",
+    "# rmse_train = np.empty(Measure_Numb)\n",
+    "# rmse_test = np.empty(Measure_Numb)\n",
     "for Meas_Idx in range(Measure_Numb): \n",
+    "    Measure_Name = '{}_ML'.format(Y_Col_Name[Meas_Idx])\n",
     "    # loading correct ML regressor file and parameters for data preparation\n",
-    "    Regressor_File = os.path.join(Data_Folder, '{}_{}_{}_{}-Regressor.pkl'.format(ML_Date, File_Base, Y_Col_Name[Meas_Idx].replace(' ','-'), ML_Type))\n",
-    "    Parameter_File = os.path.join(Data_Folder, '{}_{}_{}_{}-Params.pkl'.format(ML_Date, File_Base, Y_Col_Name[Meas_Idx].replace(' ','-'), ML_Type))\n",
+    "    Regressor_File = os.path.join(Data_Folder, '{}_{}_{}_{}{}-Regressor.pkl'.format(ML_Date, File_Base, Measure_Name.replace(' ','-'), ML_Regressor, Response_Value))\n",
+    "    Parameter_File = os.path.join(Data_Folder, '{}_{}_{}_{}{}-Params.pkl'.format(ML_Date, File_Base, Measure_Name.replace(' ','-'), ML_Regressor, Response_Value))\n",
+    "#     if ML_Type == 'C':\n",
+    "#         YCol = '{}_Cat'.format(Y_Col_Name[Meas_Idx])\n",
+    "#     else:\n",
+    "#         YCol = Y_Col_Name[Meas_Idx]\n",
     "\n",
     "    try:\n",
-    "        ML_DictName = '{}_Regressor'.format(Y_Col_Name[Meas_Idx])\n",
-    "        ML_Best[ML_DictName] = joblib.load(Regressor_File)\n",
+    "#         ML_DictName = (Measure_Name)\n",
+    "        ML_Best[Measure_Name] = joblib.load(Regressor_File)\n",
     "        # I assume the parameters have been generated in the same run as the regressor itself and is located in the same directory following the default naming scheme\n",
     "        Data_Prep_Params = pickle.load(open(Parameter_File,'rb'))\n",
     "        # extracting the positions that were removed because of insufficient information content\n",
     "        Positions_removed = Data_Prep_Params['Positions_removed']\n",
     "        # if the data was standardized we load the corresponding function\n",
-    "        if eval(Name_Dict['Data_Standard']):\n",
-    "            # extracting standard scaler from existing random forest regressor\n",
+    "        if Response_Value>1:\n",
+    "            # loading standard scaler\n",
+    "            Scaler_File = os.path.join(Data_Folder, '{}_{}_{}-Scaler.pkl'.format(time.strftime('%Y%m%d'), File_Base, Name_Dict['ML_Regressor']))\n",
+    "            Expr_Scaler = pickle.load(open(Scaler_File,'rb'))\n",
     "            # The standard scaler default name is the name of the expression measurement column with suffix: '_Scaler'\n",
     "            Scaler_DictName = '{}_Scaler'.format(Y_Col_Name[Meas_Idx])\n",
-    "            Expr_Scaler[Scaler_DictName] = Data_Prep_Params[Scaler_DictName]\n",
+    "#             Expr_Scaler[Scaler_DictName] = Data_Prep_Params[Scaler_DictName]\n",
     "    except FileNotFoundError:\n",
     "        print('Regressor file not found. Check parameter \"ML_Date\" in \"config.txt\"')\n",
     "\n",
@@ -141,10 +154,10 @@
     "    # adding the additional feature, here GC-content\n",
     "    X_train = np.append(X_train,SeqTrain[AddFeat].values, axis=1)\n",
     "    # activity prediction of training set with best random forest estimator\n",
-    "    Y_train_pred[:,Meas_Idx] = ML_Best[ML_DictName].predict(X_train)\n",
+    "    Y_train_pred[:,Meas_Idx] = ML_Best[Measure_Name].predict(X_train)\n",
     "    # correcting the prediction for standardized data\n",
-    "    if eval(Name_Dict['Data_Standard']):\n",
-    "        Y_train_pred[:,Meas_Idx] = Expr_Scaler[Scaler_DictName].inverse_transform(Y_train_pred[:,Meas_Idx])\n",
+    "#     if eval(Name_Dict['Data_Standard']):\n",
+    "#         Y_train_pred[:,Meas_Idx] = Expr_Scaler[Scaler_DictName].inverse_transform(Y_train_pred[:,Meas_Idx])\n",
     "\n",
     "    # Test set prediction\n",
     "    # removing sequence positions that were missing in the feature vector for ml\n",
@@ -154,33 +167,35 @@
     "    # adding the additional feature, here GC-content\n",
     "    X_test = np.append(X_test,SeqTest[AddFeat].values, axis=1)\n",
     "    # activity prediction of training set with best random forest estimator\n",
-    "    Y_test_pred[:,Meas_Idx] = ML_Best[ML_DictName].predict(X_test)\n",
+    "    Y_test_pred[:,Meas_Idx] = ML_Best[Measure_Name].predict(X_test)\n",
     "    # correcting the prediction for standardized data\n",
-    "    if eval(Name_Dict['Data_Standard']):\n",
-    "        Y_test_pred[:,Meas_Idx] = Expr_Scaler[Scaler_DictName].inverse_transform(Y_test_pred[:,Meas_Idx])\n",
+    "#     if eval(Name_Dict['Data_Standard']):\n",
+    "#         Y_test_pred[:,Meas_Idx] = Expr_Scaler[Scaler_DictName].inverse_transform(Y_test_pred[:,Meas_Idx])\n",
     "\n",
     "    # corresponding observations scaled\n",
     "#     Scaler_DictName = '{}_Scaler'.format(Y_Col_Name[Meas_Idx])\n",
-    "    Y_train[:, Meas_Idx] = SeqTrain[Y_Col_Name[Meas_Idx]].values\n",
-    "    Y_test[:, Meas_Idx] = SeqTest[Y_Col_Name[Meas_Idx]].values\n",
+    "    Y_train[:, Meas_Idx] = SeqTrain[Measure_Name].values\n",
+    "    Y_test[:, Meas_Idx] = SeqTest[Measure_Name].values\n",
     "\n",
     "    r2_train[Meas_Idx] = r2_score(Y_train[:, Meas_Idx], Y_train_pred[:, Meas_Idx])\n",
     "    r2_test[Meas_Idx] = r2_score(Y_test[:, Meas_Idx], Y_test_pred[:, Meas_Idx])\n",
-    "    rmse_train[Meas_Idx] = sqrt(mean_squared_error(Y_train[:, Meas_Idx], Y_train_pred[:, Meas_Idx]))\n",
-    "    rmse_test[Meas_Idx] = sqrt(mean_squared_error(Y_test[:, Meas_Idx], Y_test_pred[:, Meas_Idx]))\n",
+    "#     rmse_train[Meas_Idx] = sqrt(mean_squared_error(Y_train[:, Meas_Idx], Y_train_pred[:, Meas_Idx]))\n",
+    "#     rmse_test[Meas_Idx] = sqrt(mean_squared_error(Y_test[:, Meas_Idx], Y_test_pred[:, Meas_Idx]))\n",
     "    \n",
     "    # cross-validation scoring\n",
     "    cv = GroupShuffleSplit(n_splits=CVsplit, test_size=.1, random_state=42)\n",
     "    # if applicable correcting target variable according to the standardization\n",
-    "    if eval(Name_Dict['Data_Standard']):\n",
-    "        Y_train2 = np.ravel(Expr_Scaler[Scaler_DictName].transform(SeqTrain[Y_Col_Name[Meas_Idx]].values.reshape(-1, 1)))\n",
-    "    else:\n",
-    "        Y_train2 = Y_train[:, Meas_Idx]\n",
+    "#     if eval(Name_Dict['Data_Standard']):\n",
+    "#         Y_train2 = np.ravel(Expr_Scaler[Scaler_DictName].transform(SeqTrain[YCol].values.reshape(-1, 1)))\n",
+    "#     else:\n",
+    "#         Y_train2 = Y_train[:, Meas_Idx]\n",
+    "    Y_train2 = Y_train[:, Meas_Idx]\n",
     "    groups = SeqTrain['Sequence_letter-encrypted']\n",
-    "    scores[:,Meas_Idx] = cross_val_score(ML_Best[ML_DictName], X_train, Y_train2, groups=groups, scoring=my_r2_score, cv=cv)# , groups=groups, scoring=my_r2_score\n",
+    "    scores[:,Meas_Idx] = cross_val_score(ML_Best[Measure_Name], X_train, Y_train2, groups=groups, scoring=my_score, cv=cv)# , groups=groups, scoring=my_r2_score\n",
     "\n",
-    "    print('Cross validation for ML-Type: {}'.format(ML_Type))\n",
-    "    print('R2 Statistic: {:.2f} (+/-{:.2f})'.format(scores[:,Meas_Idx].mean(), scores[:,Meas_Idx].std()*2))"
+    "    print('Cross validation for ML-Type: {}'.format(Name_Dict['ML_Regressor']))\n",
+    "    Report_txt = 'F1-weighted average Statistic: {:.2f} (+/-{:.2f})' if Response_Value >1 else 'R2 Statistic: {:.2f} (+/-{:.2f})'\n",
+    "    print(Report_txt.format(scores[:,Meas_Idx].mean(), scores[:,Meas_Idx].std()*2))"
    ]
   },
   {
@@ -209,7 +224,7 @@
     "\n",
     "    plt.scatter(Y_train[:, Meas_Idx], Y_train_pred[:, Meas_Idx], marker='+')\n",
     "    plt.scatter(Y_test[:, Meas_Idx], Y_test_pred[:, Meas_Idx], marker='o', c='r')\n",
-    "    plt.title('{} of {}'.format(ML_Type, Y_Col_Name[Meas_Idx]), fontsize=18)\n",
+    "    plt.title('{} of {}'.format(ML_Regressor, Y_Col_Name[Meas_Idx]), fontsize=18)\n",
     "    plt.xlabel('measured {}'.format(Expr_Unit), fontsize=FigFontSize)\n",
     "    plt.ylabel('predicted {}'.format(Expr_Unit), fontsize=FigFontSize)\n",
     "    plt.legend(['Training set, R$^2$={:.2f}'.format(r2_train[Meas_Idx]),'Test set, R$^2$={:.2f}'.format(r2_test[Meas_Idx])], loc='upper left', fontsize=FigFontSize)\n",
@@ -236,19 +251,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if ML_Type == 'RFR' or ML_Type == 'GBR':\n",
+    "if ML_Regressor in ['RF', 'GBR']:\n",
     "    Nr_EngFeat = len(eval(Name_Dict['Add_Feat']))\n",
     "    Nucleotide_Importance = dict()\n",
     "    AddFeat_Importance = dict()\n",
     "    GC_Importance = np.empty((Measure_Numb,1))\n",
     "\n",
     "    for Meas_Idx in range(Measure_Numb): \n",
-    "        ML_DictName = '{}_Regressor'.format(Y_Col_Name[Meas_Idx])\n",
+    "        ML_DictName = '{}_ML_Regressor'.format(Y_Col_Name[Meas_Idx])\n",
     "        #number of engineered additional features\n",
     "    #     FI_DictName = '{}_FI'.format(Y_Col_Name[Meas_Idx])\n",
     "    #     AddFI_DictName = '{}_FI'.format(Y_Col_Name[Meas_Idx])\n",
-    "        Nucleotide_Importance[Meas_Idx] = np.array(ML_Best[ML_DictName].feature_importances_[0:-Nr_EngFeat]).reshape(-1,4)\n",
-    "        AddFeat_Importance = ML_Best[ML_DictName].feature_importances_[-Nr_EngFeat:]\n",
+    "        Nucleotide_Importance[Meas_Idx] = np.array(ML_Best[Measure_Name].feature_importances_[0:-Nr_EngFeat]).reshape(-1,4)\n",
+    "        AddFeat_Importance = ML_Best[Measure_Name].feature_importances_[-Nr_EngFeat:]\n",
     "    #     print(Nucleotide_Importance)\n",
     "        MeasName = '{}_FI'.format(Y_Col_Name[Meas_Idx])\n",
     "    #     Feat_Nucl = [len(i) for i in Nucleotide_Importance[Measure_Numb]]\n",
@@ -277,7 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if ML_Type == 'RFR' or ML_Type == 'GBR':\n",
+    "if ML_Regressor in ['RF', 'GBR']:\n",
     "    # Number of independent promoter library measurements\n",
     "    for Meas_Idx in range(Measure_Numb): \n",
     "        MeasName = '{}_FI'.format(Y_Col_Name[Meas_Idx])\n",
