--- a/4-Exploration-Space.ipynb
+++ b/4-Exploration-Space.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = init_Exp2('config_EcolPtai.txt')\n",
+    "Name_Dict = init_Exp2('config_Pput.txt')\n",
     "\n",
     "Y_Col_Name = eval(Name_Dict['Y_Col_Name'])\n",
     "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
