--- a/5-Promoter-Prediction.ipynb
+++ b/5-Promoter-Prediction.ipynb
@@ -49,10 +49,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = init_Exp2('config_EcolPtai.txt')\n",
+    "Name_Dict = init_Exp2('config_Pput.txt')\n",
     "\n",
     "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
     "Y_Col_Name = eval(Name_Dict['Y_Col_Name'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Name_Dict"
    ]
   },
   {
@@ -75,7 +84,7 @@
     "# loading synthetic promoter library\n",
     "Csv_ID = Name_Dict['Csv_ID']\n",
     "SynCsv_File = os.path.join('{}_{}_{}.csv'.format(Name_Dict['SynLib_Date'], File_Base, Csv_ID)) #'data-PromLib_EcolPtai\\\\TillTest_predicted.xlsx'     \n",
-    "Name_Synth = Name_Dict\n",
+    "Name_Synth = Name_Dict.copy()\n",
     "Name_Synth['Data_File'] = SynCsv_File\n",
     "SynDat = Data_Src_Load(Name_Synth)\n"
    ]
