--- a/1-Statistical-Analysis.ipynb
+++ b/1-Statistical-Analysis.ipynb
@@ -58,13 +58,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = init_Exp2('config_bsub.txt')\n",
+    "Name_Dict = init_Exp2('config_EcolPtai.txt')\n",
     "\n",
     "ML_Date = Name_Dict['ML_Date']\n",
     "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
     "Data_Folder = 'data-{}'.format(File_Base) \n",
     "Measure_Numb = int(Name_Dict['Library_Expression'])\n",
-    "ML_Type = Name_Dict['ML_Regressor']\n",
+    "ML_Regressor = Name_Dict['ML_Regressor'][:-1]\n",
+    "ML_Type = Name_Dict['ML_Regressor'][-1]\n",
     "Y_Col_Name = eval(Name_Dict['Y_Col_Name'])\n",
     "Fig_Type = Name_Dict['Figure_Type']\n",
     "FigFontSize = Name_Dict['Figure_Font_Size']\n"
@@ -117,8 +118,8 @@
    "outputs": [],
    "source": [
     "# standardization step, omit for CART approaches by setting variable 'Data_Standard' to 'False'\n",
-    "if eval(Name_Dict['Data_Standard']):\n",
-    "    SeqDat, Expr_Scaler = ExpressionScaler(SeqDat, Name_Dict)\n",
+    "# if eval(Name_Dict['Data_Standard']):\n",
+    "#     SeqDat, Expr_Scaler = ExpressionScaler(SeqDat, Name_Dict)\n",
     "\n",
     "# removing non-informative positions where no base diversity exists, base one hot encoding\n",
     "SeqDat_Hadj, Positions_removed, PSEntropy = Sequence_Conserved_Adjusted(SeqDat, Name_Dict, Entropy_cutoff=0)"
@@ -151,10 +152,10 @@
     "\n",
     "# we loop over all independent expression measurements\n",
     "for idx in range(Measurements):\n",
-    "    if eval(Name_Dict['Data_Standard']):\n",
-    "        Measure_Name = '{}_scaled'.format(Y_Col_Name[idx])    \n",
-    "    else:\n",
-    "        Measure_Name = Y_Col_Name[idx]\n",
+    "#     if eval(Name_Dict['Data_Standard']):\n",
+    "    Measure_Name = '{}_ML'.format(Y_Col_Name[idx])    \n",
+    "#     else:\n",
+    "#         Measure_Name = Y_Col_Name[idx]\n",
     "    print(Measure_Name)\n",
     "# # removing non-informative positions where no base diversity exists, base one hot encoding\n",
     "    Expr_avg = ExpressionStrength_HeatMap(SeqDat_Hadj, Measure_Name) #Expression_Column)\n",
@@ -171,10 +172,10 @@
     "#     df_HeatMaps(Expr_var, 'Expression variance', True, HM_File.format('Variance'), cbar_lab=None, FigFontSize=FigFontSize)\n",
     "\n",
     "Expr_array = np.delete(Expr_array, Positions_removed, axis=0)\n",
-    "if eval(Name_Dict['Data_Standard']) and len(Y_Col_Name) == 2:\n",
+    "if eval(Name_Dict['Response_Value']) == 0 and len(Y_Col_Name) == 2:\n",
     "    print('The variance plot identifies the positions on which bases have a statistically divergent effect on activity.')\n",
     "    print('Only positions are shown that display a significant difference of the mean based on a Student\\'s t-test.')\n",
-    "    Measure_Name = ['{}_scaled'.format(MeasName) for MeasName in Y_Col_Name]\n",
+    "    Measure_Name = ['{}_ML'.format(MeasName) for MeasName in Y_Col_Name]\n",
     "    #performing Students t-test for significant differences in the mean value of expression for each base on all positions\n",
     "    AllDat = np.array([SeqDat_Hadj[lookup].values for lookup in Measure_Name])\n",
     "    Ttest_result = ExpressionMean_ttest(AllDat[0,:], AllDat[1,:], list(SeqDat_Hadj['OneHot']))\n",
@@ -221,7 +222,7 @@
     "mydist = generate_distances(SeqDat, Name_Dict, Hist_Type=0)\n",
     "    \n",
     "# plt.rc('text', usetex=False)\n",
-    "plt.hist(mydist, bins=18, weights=np.zeros_like(mydist) + 1. / mydist.size) # BG42: [3,6:221]; BG35:[2,222:]\n",
+    "plt.hist(mydist*100, bins=18, weights=np.zeros_like(mydist) + 1. / mydist.size) # BG42: [3,6:221]; BG35:[2,222:]\n",
     "plt.xlabel('Sequence distance in %', fontsize=FigFontSize)\n",
     "plt.ylabel('Frequency', fontsize=FigFontSize)\n",
     "plt.tight_layout()\n",
@@ -288,7 +289,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(SeqDat[Y_Col_Name].values, bins=25)\n",
+    "# deciding whether to plot histogram of measured expression or categorized values\n",
+    "# if ML_Type == 'C':\n",
+    "#     Measures = ['{}_Cat'.format(Meas) for Meas in Y_Col_Name]\n",
+    "# else:\n",
+    "#     Measures = Y_Col_Name\n",
+    "    \n",
+    "Measures = ['{}_ML'.format(Meas) for Meas in Y_Col_Name]\n",
+    "ExprData = SeqDat[Measures].values\n",
+    "\n",
+    "plt.hist(ExprData, bins=25)\n",
     "plt.xlabel(Name_Dict['Expression_Unit'], fontsize=FigFontSize)\n",
     "plt.ylabel('Frequency', fontsize=FigFontSize)\n",
     "plt.legend(Y_Col_Name)\n",
@@ -314,8 +324,9 @@
    "outputs": [],
    "source": [
     "if len(Y_Col_Name) == 2:\n",
-    "    ExprRange_1 = SeqDat[Y_Col_Name[0]]#/SeqDat[Y_Col_Name[0]].max()*100\n",
-    "    ExprRange_2 = SeqDat[Y_Col_Name[1]]#/SeqDat[Y_Col_Name[1]].max()*100\n",
+    "    Measure_Name = ['{}_ML'.format(MeasName) for MeasName in Y_Col_Name]\n",
+    "    ExprRange_1 = SeqDat[Measure_Name[0]]#/SeqDat[Y_Col_Name[0]].max()*100\n",
+    "    ExprRange_2 = SeqDat[Measure_Name[1]]#/SeqDat[Y_Col_Name[1]].max()*100\n",
     "\n",
     "    fig = plt.figure()\n",
     "#     ax = fig.gca()\n",
@@ -324,8 +335,8 @@
     "\n",
     "\n",
     "    plt.plot(ExprRange_1, ExprRange_2, 'xk')\n",
-    "    plt.xlabel('{}, {}'.format(Y_Col_Name[0], Name_Dict['Expression_Unit']), fontsize=FigFontSize)\n",
-    "    plt.ylabel('{}, {}'.format(Y_Col_Name[1], Name_Dict['Expression_Unit']), fontsize=FigFontSize)\n",
+    "    plt.xlabel('{}, {}'.format(Measure_Name[0], Name_Dict['Expression_Unit']), fontsize=FigFontSize)\n",
+    "    plt.ylabel('{}, {}'.format(Measure_Name[1], Name_Dict['Expression_Unit']), fontsize=FigFontSize)\n",
     "    plt.title('Cross Expression Translation')\n",
     "    plt.grid()\n",
     "    plt.tight_layout()\n",
