--- a/2-Regressor-Training.ipynb
+++ b/2-Regressor-Training.ipynb
@@ -43,7 +43,7 @@
     "import timeit\n",
     "import joblib\n",
     "import pickle\n",
-    "from ExpressionExpert_Functions import init_Exp2, Data_Src_Load, make_DataDir, split_train_test, ExpressionScaler, Sequence_Conserved_Adjusted, MyRFR, MySVR, MyGBR\n",
+    "from ExpressionExpert_Functions import init_Exp2, Data_Src_Load, make_DataDir, split_train_test, ExpressionScaler, Sequence_Conserved_Adjusted, MyRF, MySV, MyGB\n",
     "from sklearn.model_selection import GroupShuffleSplit"
    ]
   },
@@ -62,14 +62,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = init_Exp2('config_EcolPtai.txt')\n",
+    "Name_Dict = init_Exp2('config_Pput.txt')\n",
     "\n",
     "ML_Date = Name_Dict['ML_Date']\n",
     "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
     "Data_Folder = 'data-{}'.format(File_Base) \n",
     "Measure_Numb = int(Name_Dict['Library_Expression'])\n",
-    "ML_Type = Name_Dict['ML_Regressor']\n",
-    "Y_Col_Name = eval(Name_Dict['Y_Col_Name'])\n"
+    "ML_Regressor = Name_Dict['ML_Regressor'][:-1]\n",
+    "ML_Type = Name_Dict['ML_Regressor'][-1]\n",
+    "Y_Col_Name = eval(Name_Dict['Y_Col_Name'])\n",
+    "Response_Value = eval(Name_Dict['Response_Value'])\n"
    ]
   },
   {
@@ -116,11 +118,16 @@
     "GenSplit = True if ML_Date == time.strftime('%Y%m%d') else False\n",
     "if GenSplit:\n",
     "    print('new train-test')\n",
+    "    Measure_Name = ['{}_ML'.format(MeasName) for MeasName in Y_Col_Name]\n",
+    "\n",
     "    train_size = 1 - eval(Name_Dict['TestRatio'])\n",
     "    # split number '1' because we only use one final test set. Cross validation comes later\n",
     "    gss = GroupShuffleSplit(n_splits=1, train_size=train_size)\n",
     "    X = SeqDat['Sequence']\n",
-    "    y = SeqDat[Y_Col_Name]\n",
+    "#     if ML_Type=='C':\n",
+    "#         y = SeqDat['ExprCat']\n",
+    "#     else:\n",
+    "    y = SeqDat[Measure_Name]\n",
     "    groups = SeqDat['Sequence_letter-encrypted'].str.upper()\n",
     "    Train_Idx, Test_Idx = list(gss.split(X, y, groups))[0]\n",
     "    SeqTest = SeqDat.iloc[Test_Idx].reset_index(drop=True)\n",
@@ -156,8 +163,15 @@
    "outputs": [],
    "source": [
     "# standardization step, omit for CART approaches by setting variable 'Data_Standard' to 'False'\n",
-    "if eval(Name_Dict['Data_Standard']):\n",
+    "# Target for classification cannot be normalized\n",
+    "# The standardization is performed on the original data, not the data from previous standardization\n",
+    "# Previous standardization results are overwritten\n",
+    "if eval(Name_Dict['Response_Value'])==0:\n",
+    "    print('New standardization of observed expression values.')\n",
     "    SeqTrain, Expr_Scaler = ExpressionScaler(SeqTrain, Name_Dict)\n",
+    "    # storing scaler\n",
+    "    Scaler_File = os.path.join(Data_Folder, '{}_{}_{}-Scaler.pkl'.format(time.strftime('%Y%m%d'), File_Base, Name_Dict['ML_Regressor']))\n",
+    "    pickle.dump(Expr_Scaler, open(Scaler_File, 'wb'))\n",
     "\n",
     "# removing non-informative positions where no base diversity exists, base one hot encoding\n",
     "SeqTrain_Hadj, Positions_removed, PSEntropy = Sequence_Conserved_Adjusted(SeqTrain, Name_Dict, Entropy_cutoff=float(Name_Dict['Entropy_cutoff']))\n",
@@ -198,47 +212,55 @@
     "    start_time = timeit.default_timer()\n",
     "    test_ratio = .1\n",
     "    split_number = 100\n",
-    "    # if the data is standardized we have to extract it from the separate column, otherwise we use the original data column\n",
-    "    Meas_Name = '{}_scaled'.format(Y_Col_Name[Meas_Idx]) if eval(Name_Dict['Data_Standard']) else Y_Col_Name[Meas_Idx]\n",
+    "    # If the data is standardized we have to extract it from the separate column, otherwise we use the original data column\n",
+    "    # If Categorization is targeted, we take the category data frame column\n",
+    "    Measure_Name = '{}_ML'.format(Y_Col_Name[Meas_Idx])\n",
+    "#     if eval(Name_Dict['Data_Standard']):\n",
+    "#         Meas_Name = '{}_scaled'.format(Y_Col_Name[Meas_Idx]) \n",
+    "#     elif ML_Type == 'C':\n",
+    "#         Meas_Name = '{}_Cat'.format(Y_Col_Name[Meas_Idx])\n",
+    "#     else: \n",
+    "#         Meas_Name = Y_Col_Name[Meas_Idx]\n",
     "    AddFeat = eval(Name_Dict['Add_Feat'])\n",
-    "    print('Starting new {} regressor training for {}'.format(ML_Type, Meas_Name))\n",
+    "    print('Starting new {}-ML training for {}'.format(ML_Regressor, Measure_Name))\n",
     "    # starting regression with regressor type defined in the config file\n",
     "    # RFR: random forest regression\n",
-    "    if ML_Type == 'RFR':\n",
-    "        MyReg = MyRFR(SeqTrain_Hadj, test_ratio, split_number, Meas_Name, AddFeat)\n",
+    "    if ML_Regressor == 'RF':\n",
+    "        MyML = MyRF(SeqTrain_Hadj, test_ratio, split_number, Measure_Name, Response_Value, AddFeat)\n",
     "    # SVR: support vector regression\n",
-    "    elif ML_Type == 'SVR':\n",
-    "        MyReg = MySVR(SeqTrain_Hadj, test_ratio, split_number, Meas_Name, AddFeat)\n",
+    "    elif ML_Regressor == 'SV':\n",
+    "        MyML = MySV(SeqTrain_Hadj, test_ratio, split_number, Measure_Name, Response_Value, AddFeat)\n",
     "    # TPOT: TPOT automated tree regression\n",
-    "    elif ML_Type == 'GBR':\n",
-    "        MyReg = MyGBR(SeqTrain_Hadj, test_ratio, split_number, Meas_Name, AddFeat)\n",
-    "    elif ML_Type == 'TPOT':\n",
-    "        print('TPOT')\n",
+    "    elif ML_Regressor == 'GB':\n",
+    "        MyML = MyGB(SeqTrain_Hadj, test_ratio, split_number, Measure_Name, Response_Value, AddFeat)\n",
+    "#     elif ML_Type == 'TPOT':\n",
+    "#         print('TPOT')\n",
     "    else:\n",
-    "        print('Regressor type not recognized, choose:')\n",
-    "        print('\"RFR\": random forest regression')\n",
-    "        print('\"SVR\": support vector regression')\n",
-    "        print('\"TPOT\": automated tree regression pipeline (requires TPOT installation)')\n",
+    "        print('Machine Learning type not recognized, choose:')\n",
+    "        print('\"RF<R/C>\": random forest')\n",
+    "        print('\"GB<R/C>\": gradient boosting')\n",
+    "        print('\"SV<R/C>\": support vector')\n",
+    "#         print('\"TPOT\": automated tree regression pipeline (requires TPOT installation)')\n",
     "        break\n",
     "        \n",
     "    run_time = timeit.default_timer() - start_time\n",
     "    print('Training run time: {:.0f} sec'.format(run_time))\n",
     "\n",
     "    # getting the best estimator\n",
-    "    Regressor_Best = MyReg.best_estimator_\n",
+    "    ML_Best = MyML.best_estimator_\n",
     "\n",
     "    # saving the best estimator\n",
-    "    Regressor_File = os.path.join(Data_Folder, '{}_{}_{}_{}-Regressor.pkl'.format(time.strftime('%Y%m%d'), File_Base, Y_Col_Name[Meas_Idx].replace(' ','-'), ML_Type))\n",
-    "    joblib.dump(Regressor_Best, Regressor_File)\n",
+    "    Regressor_File = os.path.join(Data_Folder, '{}_{}_{}_{}{}-Regressor.pkl'.format(time.strftime('%Y%m%d'), File_Base, Measure_Name.replace(' ','-'), ML_Regressor, Response_Value))\n",
+    "    joblib.dump(ML_Best, Regressor_File)\n",
     "    # conserved positions not used as input for the regressor\n",
     "    Data_Prep_Params = {'Positions_removed': Positions_removed}\n",
     "    # Mean and standard deviation of training set expression used for normalizing\n",
     "    if eval(Name_Dict['Data_Standard']):\n",
     "        # The standard scaler default name is the name of the expression measurement column with suffix: '_Scaler'    \n",
-    "        Scaler_DictName = '{}_Scaler'.format(Y_Col_Name[Meas_Idx])\n",
+    "        Scaler_DictName = '{}_Scaler'.format(Meas_Name)\n",
     "        Data_Prep_Params[Scaler_DictName] = Expr_Scaler[Scaler_DictName]\n",
     "\n",
-    "    Parameter_File = os.path.join(Data_Folder, '{}_{}_{}_{}-Params.pkl'.format(time.strftime('%Y%m%d'), File_Base, Y_Col_Name[Meas_Idx].replace(' ','-'), ML_Type))\n",
+    "    Parameter_File = os.path.join(Data_Folder, '{}_{}_{}_{}{}-Params.pkl'.format(time.strftime('%Y%m%d'), File_Base, Measure_Name.replace(' ','-'), ML_Regressor, Response_Value))\n",
     "    pickle.dump(Data_Prep_Params, open(Parameter_File, 'wb'))"
    ]
   }
