analysis categorical Pput

--- a/1-Statistical-Analysis.ipynb
+++ b/1-Statistical-Analysis.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = init_Exp2('config_EcolPtai.txt')\n",
+    "Name_Dict = init_Exp2('config_Pput.txt')\n",
     "\n",
     "ML_Date = Name_Dict['ML_Date']\n",
     "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
@@ -67,6 +67,7 @@
     "ML_Regressor = Name_Dict['ML_Regressor'][:-1]\n",
     "ML_Type = Name_Dict['ML_Regressor'][-1]\n",
     "Y_Col_Name = eval(Name_Dict['Y_Col_Name'])\n",
+    "Response_Value = eval(Name_Dict['Response_Value'])\n",
     "Fig_Type = Name_Dict['Figure_Type']\n",
     "FigFontSize = Name_Dict['Figure_Font_Size']\n"
    ]
@@ -98,6 +99,17 @@
     "print('Unique samples: {}'.format(Num_UniqueSamples))\n",
     "print('Number of replicates: min: {} - median: {} - max: {}'.format(Min_ReplicateNumber, Median_ReplicateNumber, Max_ReplicateNumber))\n",
     "SeqDat.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import entropy\n",
+    "value, counts = np.unique(SeqDat['GC-content'], return_counts=True)\n",
+    "entropy(counts)"
    ]
   },
   {
@@ -294,12 +306,15 @@
     "#     Measures = ['{}_Cat'.format(Meas) for Meas in Y_Col_Name]\n",
     "# else:\n",
     "#     Measures = Y_Col_Name\n",
-    "    \n",
+    "import seaborn as sns\n",
+    "\n",
     "Measures = ['{}_ML'.format(Meas) for Meas in Y_Col_Name]\n",
     "ExprData = SeqDat[Measures].values\n",
     "\n",
-    "plt.hist(ExprData, bins=25)\n",
+    "plt.hist(ExprData)\n",
     "plt.xlabel(Name_Dict['Expression_Unit'], fontsize=FigFontSize)\n",
+    "if Response_Value > 1:\n",
+    "    plt.xticks([0,1,2], ['Level {}'.format(myval) for myval in range(Response_Value)])\n",
     "plt.ylabel('Frequency', fontsize=FigFontSize)\n",
     "plt.legend(Y_Col_Name)\n",
     "Fig_ID = Name_Dict['ExprHist_File']\n",
