--- a/2-Regressor-Training.ipynb
+++ b/2-Regressor-Training.ipynb
@@ -134,7 +134,7 @@
     "    SeqTrain = SeqDat.iloc[Train_Idx].reset_index(drop=True)\n",
     "\n",
     "    TrainTest_Data = {'Train': SeqTrain, 'Test': SeqTest}\n",
-    "    TrainTest_File = os.path.join(Data_Folder, '{}_{}_TrainTest-Data.pkl'.format(time.strftime('%Y%m%d'), File_Base))\n",
+    "    TrainTest_File = os.path.join(Data_Folder, '{}_{}_{}_TrainTest-Data.pkl'.format(time.strftime('%Y%m%d'), File_Base, Response_Value))\n",
     "    pickle.dump(TrainTest_Data, open(TrainTest_File, 'wb'))\n",
     "\n",
     "    print('Train and test data stored as: {}'.format(TrainTest_File))\n",
