--- a/3-Regressor-Performance.ipynb
+++ b/3-Regressor-Performance.ipynb
@@ -37,7 +37,7 @@
     "from math import sqrt\n",
     "from ExpressionExpert_Functions import init_Exp2, Data_Src_Load, split_train_test, list_onehot, Insert_row_, my_CrossValScore, make_DataDir\n",
     "from sklearn.model_selection import cross_val_score, GroupShuffleSplit\n",
-    "from sklearn.metrics import r2_score, mean_squared_error, make_scorer, balanced_accuracy_score, classification_report, f1_score\n",
+    "from sklearn.metrics import r2_score, mean_squared_error, make_scorer, plot_confusion_matrix, classification_report, f1_score\n",
     "%matplotlib inline\n"
    ]
   },
@@ -80,7 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TrainTest_File = os.path.join(Data_Folder, '{}_{}_TrainTest-Data.pkl'.format(ML_Date, File_Base))\n",
+    "TrainTest_File = os.path.join(Data_Folder, '{}_{}_{}_TrainTest-Data.pkl'.format(ML_Date, File_Base, Response_Value))\n",
     "TrainTest_Data = pickle.load(open(TrainTest_File,'rb'))\n",
     "SeqTrain, SeqTest = TrainTest_Data['Train'], TrainTest_Data['Test']"
    ]
@@ -138,7 +138,7 @@
     "        # extracting the positions that were removed because of insufficient information content\n",
     "        Positions_removed = Data_Prep_Params['Positions_removed']\n",
     "        # if the data was standardized we load the corresponding function\n",
-    "        if Response_Value>1:\n",
+    "        if Response_Value == 0:\n",
     "            # loading standard scaler\n",
     "            Scaler_File = os.path.join(Data_Folder, '{}_{}_{}-Scaler.pkl'.format(time.strftime('%Y%m%d'), File_Base, Name_Dict['ML_Regressor']))\n",
     "            Expr_Scaler = pickle.load(open(Scaler_File,'rb'))\n",
@@ -189,11 +189,11 @@
     "#         Y_train2 = np.ravel(Expr_Scaler[Scaler_DictName].transform(SeqTrain[YCol].values.reshape(-1, 1)))\n",
     "#     else:\n",
     "#         Y_train2 = Y_train[:, Meas_Idx]\n",
-    "    Y_train2 = Y_train[:, Meas_Idx]\n",
+    "#     Y_train2 = Y_train[:, Meas_Idx]\n",
     "    groups = SeqTrain['Sequence_letter-encrypted']\n",
-    "    scores[:,Meas_Idx] = cross_val_score(ML_Best[Measure_Name], X_train, Y_train2, groups=groups, scoring=my_score, cv=cv)# , groups=groups, scoring=my_r2_score\n",
+    "    scores[:,Meas_Idx] = cross_val_score(ML_Best[Measure_Name], X_train, Y_train[:, Meas_Idx], groups=groups, scoring=my_score, cv=cv)# , groups=groups, scoring=my_r2_score\n",
     "\n",
-    "    print('Cross validation for ML-Type: {}'.format(Name_Dict['ML_Regressor']))\n",
+    "    print('Cross validation for {}, ML-Type: {}'.format(Measure_Name, Name_Dict['ML_Regressor']))\n",
     "    Report_txt = 'F1-weighted average Statistic: {:.2f} (+/-{:.2f})' if Response_Value >1 else 'R2 Statistic: {:.2f} (+/-{:.2f})'\n",
     "    print(Report_txt.format(scores[:,Meas_Idx].mean(), scores[:,Meas_Idx].std()*2))"
    ]
@@ -221,17 +221,27 @@
     "\n",
     "for Meas_Idx in range(Measure_Numb): \n",
     "#     fig, axs = plt.subplots(nrows=1, ncols=1)\n",
-    "\n",
-    "    plt.scatter(Y_train[:, Meas_Idx], Y_train_pred[:, Meas_Idx], marker='+')\n",
-    "    plt.scatter(Y_test[:, Meas_Idx], Y_test_pred[:, Meas_Idx], marker='o', c='r')\n",
-    "    plt.title('{} of {}'.format(ML_Regressor, Y_Col_Name[Meas_Idx]), fontsize=18)\n",
-    "    plt.xlabel('measured {}'.format(Expr_Unit), fontsize=FigFontSize)\n",
-    "    plt.ylabel('predicted {}'.format(Expr_Unit), fontsize=FigFontSize)\n",
-    "    plt.legend(['Training set, R$^2$={:.2f}'.format(r2_train[Meas_Idx]),'Test set, R$^2$={:.2f}'.format(r2_test[Meas_Idx])], loc='upper left', fontsize=FigFontSize)\n",
+    "    if Response_Value<2:\n",
+    "        # figure of regression plots\n",
+    "        plt.scatter(Y_train[:, Meas_Idx], Y_train_pred[:, Meas_Idx], marker='+')\n",
+    "        plt.scatter(Y_test[:, Meas_Idx], Y_test_pred[:, Meas_Idx], marker='o', c='r')\n",
+    "        plt.title('{} of {}'.format(ML_Regressor, Y_Col_Name[Meas_Idx]), fontsize=18)\n",
+    "        plt.xlabel('measured {}'.format(Expr_Unit), fontsize=FigFontSize)\n",
+    "        plt.ylabel('predicted {}'.format(Expr_Unit), fontsize=FigFontSize)\n",
+    "        plt.legend(['Training set, R$^2$={:.2f}'.format(r2_train[Meas_Idx]),'Test set, R$^2$={:.2f}'.format(r2_test[Meas_Idx])], loc='upper left', fontsize=FigFontSize)\n",
+    "        \n",
+    "    else:\n",
+    "        # plots of confusion matrix and overall classification report\n",
+    "        myLabel = ['Level {}'.format(myval) for myval in range(Response_Value)]\n",
+    "        Measure_Name = '{}_ML'.format(Y_Col_Name[Meas_Idx])\n",
+    "        plot_confusion_matrix(ML_Best[Measure_Name], X_train, Y_train[:, Meas_Idx])\n",
+    "        plot_confusion_matrix(ML_Best[Measure_Name], X_test, Y_test[:, Meas_Idx])\n",
+    "        print('Training set classification report.\\n',classification_report(Y_train, Y_train_pred))\n",
+    "        print('Test set classification report.\\n',classification_report(Y_test, Y_test_pred))\n",
     "\n",
     "    # saving the figure\n",
     "    Fig_ID = Name_Dict['CorrPlot_File']\n",
-    "    CorrPlot_File = os.path.join(Data_Folder, '{}_{}_{}_{}_{}.{}'.format(time.strftime('%Y%m%d'), File_Base, ML_Type, Fig_ID, Y_Col_Name[Meas_Idx].replace(' ','-'), Fig_Type))\n",
+    "    CorrPlot_File = os.path.join(Data_Folder, '{}_{}_{}_{}_{}.{}'.format(time.strftime('%Y%m%d'), File_Base, Name_Dict['ML_Regressor'], Fig_ID, Y_Col_Name[Meas_Idx].replace(' ','-'), Fig_Type))\n",
     "    plt.savefig(CorrPlot_File, bbox_inches='tight', format=Fig_Type)\n",
     "\n",
     "    plt.show()"
@@ -251,7 +261,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if ML_Regressor in ['RF', 'GBR']:\n",
+    "if ML_Regressor in ['RF', 'GB']:\n",
     "    Nr_EngFeat = len(eval(Name_Dict['Add_Feat']))\n",
     "    Nucleotide_Importance = dict()\n",
     "    AddFeat_Importance = dict()\n",
@@ -292,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if ML_Regressor in ['RF', 'GBR']:\n",
+    "if ML_Regressor in ['RF', 'GB']:\n",
     "    # Number of independent promoter library measurements\n",
     "    for Meas_Idx in range(Measure_Numb): \n",
     "        MeasName = '{}_FI'.format(Y_Col_Name[Meas_Idx])\n",
@@ -301,11 +311,11 @@
     "        nn_logo = lm.Logo(PWM_best)\n",
     "        nn_logo.ax.set_xlabel('Position', fontsize=FigFontSize)\n",
     "        nn_logo.ax.set_ylabel(r'$\\frac{Importance_i}{\\sum Importance}$', fontsize=FigFontSize)\n",
-    "        nn_logo.ax.set_title('{} of {}'.format(ML_Type, Y_Col_Name[Meas_Idx]), fontsize=FigFontSize)\n",
+    "        nn_logo.ax.set_title('{} of {}'.format(Name_Dict['ML_Regressor'], Y_Col_Name[Meas_Idx]), fontsize=FigFontSize)\n",
     "\n",
     "        # saving the figure\n",
     "        Fig_ID = Name_Dict['LogoPlot_File']\n",
-    "        LogoPlot_File = os.path.join(Data_Folder, '{}_{}_{}_{}_{}.{}'.format(time.strftime('%Y%m%d'), File_Base, ML_Type, Fig_ID, Y_Col_Name[Meas_Idx].replace(' ','-'), Fig_Type))\n",
+    "        LogoPlot_File = os.path.join(Data_Folder, '{}_{}_{}_{}_{}.{}'.format(time.strftime('%Y%m%d'), File_Base, Name_Dict['ML_Regressor'], Fig_ID, Y_Col_Name[Meas_Idx].replace(' ','-'), Fig_Type))\n",
     "        plt.savefig(LogoPlot_File, bbox_inches='tight', format=Fig_Type)\n",
     "\n",
     "        plt.show()\n",
