--- a/4-Exploration-Space.ipynb
+++ b/4-Exploration-Space.ipynb
@@ -275,6 +275,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "[list(np.arange(SynSeq_ND_numb)[SynSeq_NearDist == np.array(SeqMeas.upper())]) for SeqMeas in Seq_Measured]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "Seq_Measured = np.unique(SeqDat['Sequence_letter-encrypted'].values)\n",
     "print('Number of different promoter sequences measured: ', Seq_Measured.shape[0])\n",
     "\n",
