--- a/categorical_analysis.ipynb
+++ b/categorical_analysis.ipynb
@@ -160,21 +160,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_f1_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from sklearn.metrics import confusion_matrix, classification_report\n",
     "from sklearn.model_selection import cross_val_score, GroupShuffleSplit\n",
     "from ExpressionExpert_Functions import list_onehot\n",
     "from sklearn.metrics import balanced_accuracy_score, classification_report, roc_auc_score, f1_score\n",
     "from sklearn.metrics import make_scorer \n",
-    "my_f1_score = make_scorer(f1_score, average='weighted')\n",
+    "my_score = make_scorer(f1_score, average='weighted')\n",
     "\n",
     "CVsplit = 25\n",
     "X_tmp = list_onehot(list(np.delete(np.array(list(SeqTrain['Sequence_label-encrypted'])),Positions_removed, axis=1)))\n",
@@ -210,7 +201,7 @@
     "# if applicable correcting target variable according to the standardization\n",
     "# Y_train2 = Y_train\n",
     "groups = SeqTrain['Sequence_letter-encrypted']\n",
-    "scores = cross_val_score(ML_Best, X_train, Y_train, groups=groups, scoring=my_f1_score, cv=cv)# , groups=groups, scoring=my_r2_score\n",
+    "scores = cross_val_score(ML_Best, X_train, Y_train, groups=groups, scoring=my_score, cv=cv)# , groups=groups, scoring=my_r2_score\n",
     "\n",
     "print('Cross validation for ML-Type: {}'.format(ML_Type))\n",
     "print('R2 Statistic: {:.2f} (+/-{:.2f})'.format(scores.mean(), scores.std()*2))"
