Pput classification analysis

--- a/1-Statistical-Analysis.ipynb
+++ b/1-Statistical-Analysis.ipynb
@@ -68,6 +68,7 @@
     "ML_Type = Name_Dict['ML_Regressor'][-1]\n",
     "Y_Col_Name = eval(Name_Dict['Y_Col_Name'])\n",
     "Response_Value = eval(Name_Dict['Response_Value'])\n",
+    "Entropy_cutoff = eval(Name_Dict['Entropy_cutoff'])\n",
     "Fig_Type = Name_Dict['Figure_Type']\n",
     "FigFontSize = Name_Dict['Figure_Font_Size']\n"
    ]
