--- a/2-Regressor-Training.ipynb
+++ b/2-Regressor-Training.ipynb
@@ -139,7 +139,7 @@
     "\n",
     "    print('Train and test data stored as: {}'.format(TrainTest_File))\n",
     "else:\n",
-    "    TrainTest_File = os.path.join(Data_Folder, '{}_{}_TrainTest-Data.pkl'.format(ML_Date, File_Base))\n",
+    "    TrainTest_File = os.path.join(Data_Folder, '{}_{}_{}_TrainTest-Data.pkl'.format(ML_Date, File_Base, Response_Value))\n",
     "    TrainTest_Data = pickle.load(open(TrainTest_File,'rb'))\n",
     "    SeqTrain, SeqTest = TrainTest_Data['Train'], TrainTest_Data['Test']\n",
     "    print('Load existing Train-Test split.')"
@@ -222,7 +222,8 @@
     "#     else: \n",
     "#         Meas_Name = Y_Col_Name[Meas_Idx]\n",
     "    AddFeat = eval(Name_Dict['Add_Feat'])\n",
-    "    print('Starting new {}-ML training for {}'.format(ML_Regressor, Measure_Name))\n",
+    "    MLType = 'Classification' if Response_Value > 1 else 'Regression'\n",
+    "    print('Starting new {}-ML training with {} for {}'.format(ML_Regressor, MLType, Measure_Name))\n",
     "    # starting regression with regressor type defined in the config file\n",
     "    # RFR: random forest regression\n",
     "    if ML_Regressor == 'RF':\n",
