--- a/3-Regressor-Performance.ipynb
+++ b/3-Regressor-Performance.ipynb
@@ -229,20 +229,30 @@
     "        plt.xlabel('measured {}'.format(Expr_Unit), fontsize=FigFontSize)\n",
     "        plt.ylabel('predicted {}'.format(Expr_Unit), fontsize=FigFontSize)\n",
     "        plt.legend(['Training set, R$^2$={:.2f}'.format(r2_train[Meas_Idx]),'Test set, R$^2$={:.2f}'.format(r2_test[Meas_Idx])], loc='upper left', fontsize=FigFontSize)\n",
-    "        \n",
+    "\n",
+    "        # saving the figure\n",
+    "#         Fig_ID = Name_Dict['CorrPlot_File']\n",
+    "        CorrPlot_File = os.path.join(Data_Folder, '{}_{}_{}_Plot_Corr-Ytrue-VS-Ypred_{}.{}'.format(time.strftime('%Y%m%d'), File_Base, Name_Dict['ML_Regressor'], Y_Col_Name[Meas_Idx].replace(' ','-'), Fig_Type))\n",
+    "        plt.savefig(CorrPlot_File, bbox_inches='tight', format=Fig_Type)\n",
+    "\n",
     "    else:\n",
     "        # plots of confusion matrix and overall classification report\n",
     "        myLabel = ['Level {}'.format(myval) for myval in range(Response_Value)]\n",
     "        Measure_Name = '{}_ML'.format(Y_Col_Name[Meas_Idx])\n",
     "        plot_confusion_matrix(ML_Best[Measure_Name], X_train, Y_train[:, Meas_Idx])\n",
+    "        # saving the figure\n",
+    "#         Fig_ID = Name_Dict['CorrPlot_File']\n",
+    "        CorrPlot_File = os.path.join(Data_Folder, '{}_{}_{}_Plot_Confusion-Train_{}.{}'.format(time.strftime('%Y%m%d'), File_Base, Name_Dict['ML_Regressor'], Y_Col_Name[Meas_Idx].replace(' ','-'), Fig_Type))\n",
+    "        plt.savefig(CorrPlot_File, bbox_inches='tight', format=Fig_Type)\n",
+    "        \n",
     "        plot_confusion_matrix(ML_Best[Measure_Name], X_test, Y_test[:, Meas_Idx])\n",
+    "        # saving the figure\n",
+    "#         Fig_ID = Name_Dict['CorrPlot_File']\n",
+    "        CorrPlot_File = os.path.join(Data_Folder, '{}_{}_{}_Plot_Confusion-Test_{}.{}'.format(time.strftime('%Y%m%d'), File_Base, Name_Dict['ML_Regressor'], Y_Col_Name[Meas_Idx].replace(' ','-'), Fig_Type))\n",
+    "        plt.savefig(CorrPlot_File, bbox_inches='tight', format=Fig_Type)\n",
     "        print('Training set classification report.\\n',classification_report(Y_train, Y_train_pred))\n",
     "        print('Test set classification report.\\n',classification_report(Y_test, Y_test_pred))\n",
     "\n",
-    "    # saving the figure\n",
-    "    Fig_ID = Name_Dict['CorrPlot_File']\n",
-    "    CorrPlot_File = os.path.join(Data_Folder, '{}_{}_{}_{}_{}.{}'.format(time.strftime('%Y%m%d'), File_Base, Name_Dict['ML_Regressor'], Fig_ID, Y_Col_Name[Meas_Idx].replace(' ','-'), Fig_Type))\n",
-    "    plt.savefig(CorrPlot_File, bbox_inches='tight', format=Fig_Type)\n",
     "\n",
     "    plt.show()"
    ]
