correct remove outlier, comparison

--- a/0-Workflow.ipynb
+++ b/0-Workflow.ipynb
@@ -138,7 +138,7 @@
     "    # engineering of target value \n",
     "    'Response_Value': Response_Value,\n",
     "    # Decision whether to remove outlier from the data set\n",
-    "    'Revome_Outlier': False,\n",
+    "    'Remove_Outlier': False,\n",
     "    # information for generating samples from statistics\n",
     "    'Stats2Samples': Stats2Samples,\n",
     "    'Stats_Std': Stats_Std,\n",
