--- a/1-Statistical-Analysis.ipynb
+++ b/1-Statistical-Analysis.ipynb
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = init_Exp2('config_Pput.txt')\n",
+    "Name_Dict = init_Exp2('config_Geobac.txt')\n",
     "\n",
     "ML_Date = Name_Dict['ML_Date']\n",
     "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
@@ -100,17 +100,6 @@
     "print('Unique samples: {}'.format(Num_UniqueSamples))\n",
     "print('Number of replicates: min: {} - median: {} - max: {}'.format(Min_ReplicateNumber, Median_ReplicateNumber, Max_ReplicateNumber))\n",
     "SeqDat.head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.stats import entropy\n",
-    "value, counts = np.unique(SeqDat['GC-content'], return_counts=True)\n",
-    "entropy(counts)"
    ]
   },
   {
