--- a/2-Regressor-Training.ipynb
+++ b/2-Regressor-Training.ipynb
@@ -62,7 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = init_Exp2('config_Pput.txt')\n",
+    "Name_Dict = init_Exp2('config_Geobac.txt')\n",
     "\n",
     "ML_Date = Name_Dict['ML_Date']\n",
     "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
@@ -142,7 +142,7 @@
     "    TrainTest_File = os.path.join(Data_Folder, '{}_{}_{}_TrainTest-Data.pkl'.format(ML_Date, File_Base, Response_Value))\n",
     "    TrainTest_Data = pickle.load(open(TrainTest_File,'rb'))\n",
     "    SeqTrain, SeqTest = TrainTest_Data['Train'], TrainTest_Data['Test']\n",
-    "    print('Load existing Train-Test split.')"
+    "    print('Load existing Train-Test split {}.'.format(TrainTest_File))"
    ]
   },
   {
@@ -256,9 +256,9 @@
     "    # conserved positions not used as input for the regressor\n",
     "    Data_Prep_Params = {'Positions_removed': Positions_removed}\n",
     "    # Mean and standard deviation of training set expression used for normalizing\n",
-    "    if eval(Name_Dict['Data_Standard']):\n",
+    "    if eval(Name_Dict['Response_Value'])==0:\n",
     "        # The standard scaler default name is the name of the expression measurement column with suffix: '_Scaler'    \n",
-    "        Scaler_DictName = '{}_Scaler'.format(Meas_Name)\n",
+    "        Scaler_DictName = '{}_Scaler'.format(Measure_Name)\n",
     "        Data_Prep_Params[Scaler_DictName] = Expr_Scaler[Scaler_DictName]\n",
     "\n",
     "    Parameter_File = os.path.join(Data_Folder, '{}_{}_{}_{}{}-Params.pkl'.format(time.strftime('%Y%m%d'), File_Base, Measure_Name.replace(' ','-'), ML_Regressor, Response_Value))\n",
