--- a/3-Regressor-Performance.ipynb
+++ b/3-Regressor-Performance.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = init_Exp2('config_Pput.txt')\n",
+    "Name_Dict = init_Exp2('config_Geobac.txt')\n",
     "\n",
     "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
     "Data_Folder = 'data-{}'.format(File_Base) \n",
@@ -82,7 +82,9 @@
    "source": [
     "TrainTest_File = os.path.join(Data_Folder, '{}_{}_{}_TrainTest-Data.pkl'.format(ML_Date, File_Base, Response_Value))\n",
     "TrainTest_Data = pickle.load(open(TrainTest_File,'rb'))\n",
-    "SeqTrain, SeqTest = TrainTest_Data['Train'], TrainTest_Data['Test']"
+    "SeqTrain, SeqTest = TrainTest_Data['Train'], TrainTest_Data['Test']\n",
+    "print('Taining set size: {}'.format(len(SeqTrain)))\n",
+    "print('Test set size: {}'.format(len(SeqTest)))"
    ]
   },
   {
@@ -250,8 +252,8 @@
     "#         Fig_ID = Name_Dict['CorrPlot_File']\n",
     "        CorrPlot_File = os.path.join(Data_Folder, '{}_{}_{}_Plot_Confusion-Test_{}.{}'.format(time.strftime('%Y%m%d'), File_Base, Name_Dict['ML_Regressor'], Y_Col_Name[Meas_Idx].replace(' ','-'), Fig_Type))\n",
     "        plt.savefig(CorrPlot_File, bbox_inches='tight', format=Fig_Type)\n",
-    "        print('Training set classification report.\\n',classification_report(Y_train, Y_train_pred))\n",
-    "        print('Test set classification report.\\n',classification_report(Y_test, Y_test_pred))\n",
+    "        print('Training set classification report.\\n',classification_report(Y_train[:, Meas_Idx], Y_train_pred[:, Meas_Idx]))\n",
+    "        print('Test set classification report.\\n',classification_report(Y_test[:, Meas_Idx], Y_test_pred[:, Meas_Idx]))\n",
     "\n",
     "\n",
     "    plt.show()"
@@ -279,6 +281,7 @@
     "\n",
     "    for Meas_Idx in range(Measure_Numb): \n",
     "        ML_DictName = '{}_ML_Regressor'.format(Y_Col_Name[Meas_Idx])\n",
+    "        Measure_Name = '{}_ML'.format(Y_Col_Name[Meas_Idx])\n",
     "        #number of engineered additional features\n",
     "    #     FI_DictName = '{}_FI'.format(Y_Col_Name[Meas_Idx])\n",
     "    #     AddFI_DictName = '{}_FI'.format(Y_Col_Name[Meas_Idx])\n",
@@ -321,7 +324,7 @@
     "        nn_logo = lm.Logo(PWM_best)\n",
     "        nn_logo.ax.set_xlabel('Position', fontsize=FigFontSize)\n",
     "        nn_logo.ax.set_ylabel(r'$\\frac{Importance_i}{\\sum Importance}$', fontsize=FigFontSize)\n",
-    "        nn_logo.ax.set_title('{} of {}'.format(Name_Dict['ML_Regressor'], Y_Col_Name[Meas_Idx]), fontsize=FigFontSize)\n",
+    "        nn_logo.ax.set_title('{} of {}'.format(ML_Regressor, Y_Col_Name[Meas_Idx]), fontsize=FigFontSize)\n",
     "\n",
     "        # saving the figure\n",
     "        Fig_ID = Name_Dict['LogoPlot_File']\n",
