--- a/RegressorTests/Regressor_Feeding.ipynb
+++ b/RegressorTests/Regressor_Feeding.ipynb
@@ -57,6 +57,29 @@
     "%matplotlib inline\n",
     "plot.hist(myExpr)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classification ML\n",
+    "\n",
+    "Classification leads to more robust prediction compared to regression when the sample volume and data quality is insufficient."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "minp = np.vstack([make_Input(15) for _ in range(1000)])\n",
+    "\n",
+    "Regressor_File = 'RFC_Ex.pkl'\n",
+    "myRegr = joblib.load(Regressor_File)\n",
+    "myExpr = myRegr.predict(minp)\n",
+    "plot.hist(myExpr, bins=3)\n"
+   ]
   }
  ],
  "metadata": {
