--- a/3-Regressor-Performance.ipynb
+++ b/3-Regressor-Performance.ipynb
@@ -35,7 +35,7 @@
     "import joblib\n",
     "import pickle\n",
     "from math import sqrt\n",
-    "from ExpressionExpert_Functions import init_Exp2, Data_Src_Load, split_train_test, list_onehot, Insert_row_, my_CrossValScore, make_DataDir\n",
+    "from ExpressionExpert_Functions import init_Exp2, Data_Src_Load, split_train_test, list_onehot, Insert_row_, my_CrossValScore, make_DataDir, largest_indices\n",
     "from sklearn.model_selection import cross_val_score, GroupShuffleSplit\n",
     "from sklearn.metrics import r2_score, mean_squared_error, make_scorer, plot_confusion_matrix, classification_report, f1_score\n",
     "%matplotlib inline\n"
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Name_Dict = init_Exp2('config_Geobac.txt')\n",
+    "Name_Dict = init_Exp2('config_bsub.txt')\n",
     "\n",
     "File_Base = Name_Dict['Data_File'].split('.')[0]\n",
     "Data_Folder = 'data-{}'.format(File_Base) \n",
@@ -197,7 +197,9 @@
     "\n",
     "    print('Cross validation for {}, ML-Type: {}'.format(Measure_Name, Name_Dict['ML_Regressor']))\n",
     "    Report_txt = 'F1-weighted average Statistic: {:.2f} (+/-{:.2f})' if Response_Value >1 else 'R2 Statistic: {:.2f} (+/-{:.2f})'\n",
-    "    print(Report_txt.format(scores[:,Meas_Idx].mean(), scores[:,Meas_Idx].std()*2))"
+    "    print(Report_txt.format(scores[:,Meas_Idx].mean(), scores[:,Meas_Idx].std()*2))\n",
+    "\n",
+    "print('Estimator input: {}-features ({:.0f} nucleotide positions)'.format(X_train.shape[1], (X_train.shape[1]-1)/4))"
    ]
   },
   {
@@ -321,6 +323,12 @@
     "        MeasName = '{}_FI'.format(Y_Col_Name[Meas_Idx])\n",
     "        PWM_tmp = pd.DataFrame(Nucleotide_Importance[Meas_Idx], columns=['A','C','G','T'])\n",
     "        PWM_best = Insert_row_(Positions_removed, PWM_tmp, np.zeros([len(Positions_removed),4]))\n",
+    "        # extracting the 3 most important features\n",
+    "        TopPos, TopNuc = largest_indices(PWM_best.values, 3)\n",
+    "        Bases = ['A','C','G','T']\n",
+    "        TopNFeat = range(3)\n",
+    "        [print('Importance {}: Position: -{}, Nucleotide: {}'.format(rank+1, PWM_best.shape[0]-TopPos[rank], Bases[TopNuc[rank]])) for rank in TopNFeat]\n",
+    "\n",
     "        nn_logo = lm.Logo(PWM_best)\n",
     "        nn_logo.ax.set_xlabel('Position', fontsize=FigFontSize)\n",
     "        nn_logo.ax.set_ylabel(r'$\\frac{Importance_i}{\\sum Importance}$', fontsize=FigFontSize)\n",
